--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" media="all" href="https://rawgit.com/hankchizljaw/boilerform/master/dist/css/boilerform.min.css?v=1.1.1" />
-    <script type="module" src="./js//main.js"></script>
+    <script type="module" src="./js/main.js"></script>
     <title>Vanilla State Management</title>
 </head>
 <body>
@@ -14,6 +14,7 @@
         <header class="intro">
             <h1 class="intro__heading">Done List</h1>
             <p class="intro__summary">A list of things you have achieved today</p>
+            <p class="intro__summary"><b>Note:</b>The data isn't stored, so it will disappear if you reload!</p>
         </header>
         <section class="app">
             <section class="app__input">
@@ -32,8 +33,8 @@
                 <p role="status" class="visually-hidden">You have done <span class="js-status">1 thing</span> today!</p>
                 <div class="[ app__decor ] [ js-count ]" aria-hidden="true">
                     <small>You've done</small>
-                    <span>1</span>
-                    <small>thing today 🙌</small>
+                    <span>0</span>
+                    <small>things today 😢</small>
                 </div>
             </aside>
         </section>
